--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "13.5.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-query": "^3.39.3"
+    "react-query": "^3.39.3",
+    "sass": "^1.69.4"
   },
   "devDependencies": {
     "@types/node": "^20",
